fixed errors on metat data

--- a/projects/index.html
+++ b/projects/index.html
@@ -15,21 +15,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Njoli Patrick: Projects</title>
   <meta name="description"
-    content='The home page of Yevgeniy (Jim) Brikman, co-founder of Gruntwork, author of "Hello, Startup" and "Terraform: Up & Running", and software engineer at LinkedIn, TripAdvisor, Cisco Systems, and Thomson Financial.' />
+    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@brikis98" />
   <meta name="twitter:title" content="Njoli Patrick: Projects" />
   <meta name="twitter:url" content="index.html" />
   <meta name="twitter:description"
-    content='The home page of Yevgeniy (Jim) Brikman, co-founder of Gruntwork, author of "Hello, Startup" and "Terraform: Up & Running", and software engineer at LinkedIn, TripAdvisor, Cisco Systems, and Thomson Financial.' />
+    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta name="twitter:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <meta property="og:title" content="Njoli Patrick: Projects" />
   <meta property="og:url" content="index.html" />
   <meta property="og:site_name" content="Njoli Patrick" />
   <meta property="article:author" content="https://www.facebook.com/brikis98" />
   <meta property="og:description"
-    content='The home page of Yevgeniy (Jim) Brikman, co-founder of Gruntwork, author of "Hello, Startup" and "Terraform: Up & Running", and software engineer at LinkedIn, TripAdvisor, Cisco Systems, and Thomson Financial.' />
+    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta property="og:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <link rel="canonical" href="index.html" />
   <link rel="alternate" type="application/rss+xml" title="Njoli Patrick" href="../feed.xml" />
