--- a/writing/index.html
+++ b/writing/index.html
@@ -27,7 +27,7 @@
     />
     <meta
       property="og:description"
-      content='The home page of Yevgeniy (Jim) Brikman, co-founder of Gruntwork, author of "Hello, Startup" and "Terraform: Up & Running", and software engineer at LinkedIn, TripAdvisor, Cisco Systems, and Thomson Financial.'
+      content="The home page of Njoli Patrick, passionate about softwares engineering."
     />
     <meta
       property="og:image"
