--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>
           I'm Njoli Patrick and am passionate about softwares engineering. My
           goal is to work as a part of a small or large teams to build and deploy usable
-          backend services. These are only a few from the tools i am awesome
+          backend services. These are only a few from the tools I am awesome
           at:
         <ul>
           <li><a href="https://www.typescriptlang.org/docs/">TypeScript</a></li>
