added more projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,22 +14,19 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Njoli Patrick: Projects</title>
-  <meta name="description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <meta name="description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@brikis98" />
   <meta name="twitter:title" content="Njoli Patrick: Projects" />
   <meta name="twitter:url" content="index.html" />
-  <meta name="twitter:description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <meta name="twitter:description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta name="twitter:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <meta property="og:title" content="Njoli Patrick: Projects" />
   <meta property="og:url" content="index.html" />
   <meta property="og:site_name" content="Njoli Patrick" />
   <meta property="article:author" content="https://www.facebook.com/brikis98" />
-  <meta property="og:description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <meta property="og:description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta property="og:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <link rel="canonical" href="index.html" />
   <link rel="alternate" type="application/rss+xml" title="Njoli Patrick" href="../feed.xml" />
@@ -90,18 +87,18 @@
     <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
       <div class="col sm-col-4 px2 mb2">
         <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank">
-          <img data-src="/assets/img/projects/img-converter.png" alt="Tip Calculator" class="lazyload" />
+          <img data-src="/assets/img/projects/img-converter.png" alt="Image Converter API" class="lazyload" />
         </a>
       </div>
       <div class="col sm-col-8 px2">
         <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank" name="gruntwork">
-          <h2 class="mt0 mb0">Tip Calculator App</h2>
+          <h2 class="mt0 mb0">Image Converter API</h2>
         </a>
         <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank" class="block h6 mb2">Demo</a>
         <p class="left-align">
         <h3>Overview</h3>
-        This is a API service that handles image convertion using predefined images or an image link or a pexels image
-        ID. this services work dynamically and can handle hign qality image conversion Check the source
+        This is a API service that handles image convertion using predefined images or an image link or
+        ID. These services work dynamically and can handle hign qality image conversion Check the source
         code Here:
         <a href="https://github.com/ogmaro/image-processing-api-starter">Image Converter</a>
         </p>
@@ -128,6 +125,44 @@
         individual can contribute evenly to pay the bill. Check the source
         code Here:
         <a href="https://github.com/ogmaro/tip-calculator-app-main">Tip calculator</a>
+        </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="https://ogmaro.github.io/homepage/" target="_blank">
+          <img data-src="/assets/img/projects/stutern.png" alt="Stutern" class="lazyload" />
+        </a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <a href="https://ogmaro.github.io/homepage/" target="_blank" name="gruntwork">
+          <h2 class="mt0 mb0">Stutern Home Page</h2>
+        </a>
+        <a href="https://ogmaro.github.io/homepage/" target="_blank" class="block h6 mb2">Demo</a>
+        <p class="left-align">
+        <h3>Overview</h3>
+        This Project was build with knowledge of HTML and CSS as a mile stone project with Stutern. The Project
+        demonstrates my knowledgeof the basic frontend skills.
+        <a href="https://github.com/ogmaro/homepage">Stutern Home Page</a>
+        </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="https://github.com/ogmaro/demo_shop" target="_blank">
+          <img data-src="/assets/img/projects/electronic.png" alt="Electronic Store" class="lazyload" />
+        </a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <a href="https://ogmaro.github.io/demo_shop/" target="_blank" name="gruntwork">
+          <h2 class="mt0 mb0"> Electronic Store</h2>
+        </a>
+        <a href="https://ogmaro.github.io/demo_shop/" target="_blank" class="block h6 mb2">Demo</a>
+        <p class="left-align">
+        <h3>Overview</h3>
+        This is a basic HTML and CSS page dynamicall filled with content using Javascript. This project taught me much
+        on DOM manipulation and event listeners.
+        <a href="https://github.com/ogmaro/demo_shop">Electronic Store</a>
         </p>
       </div>
     </div>
