--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Njoli Patrick: Home Page</title>
+  <title>Njoli Patrick: Home</title>
   <meta name="description"
     content='The home page of Njoli Patrick, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
