--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Njoli Patrick: Home</title>
+  <title>Patrick Timothy Njoli: Home</title>
   <meta name="description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+    content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@_njoli" />
-  <meta name="twitter:title" content="Njoli Patrick: Home Page" />
+  <meta name="twitter:title" content="Patrick Timothy Njoli: Home Page" />
   <meta name="twitter:url" content="index.html" />
   <meta name="twitter:description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+    content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta name="twitter:image" content="assets/img/profile-photos/njoli-patrick.jpeg" />
-  <meta property="og:title" content="Njoli Patrick: Home Page" />
+  <meta property="og:title" content="Patrick Timothy Njoli: Home Page" />
   <meta property="og:url" content="index.html" />
-  <meta property="og:site_name" content="Njoli Patrick" />
+  <meta property="og:site_name" content="Patrick Timothy Njoli" />
   <meta property="article:author" content="https://www.facebook.com/brikis98" />
   <meta property="og:description"
-    content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+    content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta property="og:image" content="assets/img/profile-photos/njoli-patrick.jpeg" />
   <link rel="canonical" href="index.html" />
-  <link rel="alternate" type="application/rss+xml" title="Njoli Patrick" href="feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="Patrick Timothy Njoli" href="feed.xml" />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icons/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icons/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icons/favicon/apple-icon-72x72.png" />
@@ -50,7 +50,7 @@
 <body>
   <nav class="clearfix border-bottom border-light-gray">
     <div class="left">
-      <a href="index.html" class="button py2 button-transparent nav-button caps">Njoli Patrick</a>
+      <a href="index.html" class="button py2 button-transparent nav-button caps">Patrick Timothy Njoli</a>
     </div>
     <ul class="right list-reset m0 nav-collapse">
       <li class="inline-block m0">
@@ -68,12 +68,12 @@
   <header class="bg-splash-gray px3 py3 border-bottom border-light-gray">
     <div class="center">
       <a href="#">
-        <img data-src="/assets/img/profile-photos/njoli-patrick.jpeg" alt="Njoli Patrick"
+        <img data-src="/assets/img/profile-photos/njoli-patrick.jpeg" alt="Patrick Timothy Njoli"
           class="lazyload border bg-white p1 border-light-gray circle square-100" />
       </a>
       <div class="clearfix">
         <a href="index.html">
-          <h1 class="page-title mt0 mb1">Njoli Patrick</h1>
+          <h1 class="page-title mt0 mb1">Patrick Timothy Njoli</h1>
         </a>
       </div>
       <h3 class="page-description body-font gray mt0 h3 regular">
@@ -100,7 +100,7 @@
       <div class="col sm-col-9 px2">
         <h3 class="mb2">About me</h3>
         <p>
-          I'm Njoli Patrick and am passionate about softwares engineering. My
+          I'm Patrick Timothy Njoli and am passionate about softwares engineering. My
           goal is to work as a part of a small or large teams to build and deploy usable
           backend services. These are only a few from the tools I am awesome
           at:
