--- a/projects/index.html
+++ b/projects/index.html
@@ -13,23 +13,23 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Njoli Patrick: Projects</title>
-  <meta name="description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <title>Patrick Timothy Njoli: Projects</title>
+  <meta name="description" content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@brikis98" />
-  <meta name="twitter:title" content="Njoli Patrick: Projects" />
+  <meta name="twitter:title" content="Patrick Timothy Njoli: Projects" />
   <meta name="twitter:url" content="index.html" />
-  <meta name="twitter:description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <meta name="twitter:description" content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta name="twitter:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
-  <meta property="og:title" content="Njoli Patrick: Projects" />
+  <meta property="og:title" content="Patrick Timothy Njoli: Projects" />
   <meta property="og:url" content="index.html" />
-  <meta property="og:site_name" content="Njoli Patrick" />
+  <meta property="og:site_name" content="Patrick Timothy Njoli" />
   <meta property="article:author" content="https://www.facebook.com/brikis98" />
-  <meta property="og:description" content='The home page of Njoli Patrick, passionate about softwares engineering.' />
+  <meta property="og:description" content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta property="og:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <link rel="canonical" href="index.html" />
-  <link rel="alternate" type="application/rss+xml" title="Njoli Patrick" href="../feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="Patrick Timothy Njoli" href="../feed.xml" />
   <link rel="apple-touch-icon" sizes="57x57" href="../assets/img/icons/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="../assets/img/icons/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="../assets/img/icons/favicon/apple-icon-72x72.png" />
@@ -55,7 +55,7 @@
 <body>
   <nav class="clearfix border-bottom border-light-gray">
     <div class="left">
-      <a href="../index.html" class="button py2 button-transparent nav-button caps">Njoli Patrick</a>
+      <a href="../index.html" class="button py2 button-transparent nav-button caps">Patrick Timothy Njoli</a>
     </div>
     <ul class="right list-reset m0 nav-collapse">
       <li class="inline-block m0">
