--- a/writing/index.html
+++ b/writing/index.html
@@ -6,28 +6,31 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Njoli Patrick: Writing</title>
-    <meta name="description" content="The home page of Njoli Patrick" />
+    <title>Patrick Timothy Njoli: Writing</title>
+    <meta name="description" content="The home page of Patrick Timothy Njoli" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@_njoli" />
-    <meta name="twitter:title" content="Njoli Patrick: Writing" />
+    <meta name="twitter:title" content="Patrick Timothy Njoli: Writing" />
     <meta name="twitter:url" content="index.html" />
-    <meta name="twitter:description" content="The home page of Njoli Patrick" />
+    <meta
+      name="twitter:description"
+      content="The home page of Patrick Timothy Njoli"
+    />
     <meta
       name="twitter:image"
       content="../assets/img/profile-photos/njoli-patrick.jpg"
     />
-    <meta property="og:title" content="Njoli Patrick: Writing" />
+    <meta property="og:title" content="Patrick Timothy Njoli: Writing" />
     <meta property="og:url" content="index.html" />
-    <meta property="og:site_name" content="Njoli Patrick" />
+    <meta property="og:site_name" content="Patrick Timothy Njoli" />
     <meta
       property="article:author"
       content="https://www.facebook.com/maronation"
     />
     <meta
       property="og:description"
-      content="The home page of Njoli Patrick, passionate about softwares engineering."
+      content="The home page of Patrick Timothy Njoli, passionate about softwares engineering."
     />
     <meta
       property="og:image"
@@ -37,9 +40,9 @@
     <link
       rel="alternate"
       type="application/rss+xml"
-      title="Njoli Patrick"
+      title="Patrick Timothy Njoli"
     />
-    
+
     <link
       rel="icon"
       type="image/png"
@@ -67,7 +70,7 @@
         <a
           href="../index.html"
           class="button py2 button-transparent nav-button caps"
-          >Njoli Patrick</a
+          >Patrick Timothy Njoli</a
         >
       </div>
       <ul class="right list-reset m0 nav-collapse">
