added education and experience

--- a/background/index.html
+++ b/background/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en">
-<!--<![endif]-->
 
-<!-- Mirrored from www.ybrikman.com/projects/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 22:44:03 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<html class="no-js" lang="en">
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
   <meta charset="utf-8" />
@@ -32,15 +26,6 @@
   <meta property="og:image" content="../assets/img/profile-photos/njoli-patrick.jpg" />
   <link rel="canonical" href="index.html" />
   <link rel="alternate" type="application/rss+xml" title="Patrick Timothy Njoli" href="../feed.xml" />
-  <link rel="apple-touch-icon" sizes="57x57" href="../assets/img/icons/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="../assets/img/icons/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="../assets/img/icons/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/icons/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="../assets/img/icons/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="../assets/img/icons/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="../assets/img/icons/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="../assets/img/icons/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/icons/favicon/apple-icon-180x180.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="../assets/img/icons/favicon/android-icon-192x192.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/icons/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/icons/favicon/favicon-96x96.png" />
@@ -61,14 +46,14 @@
     </div>
     <ul class="right list-reset m0 nav-collapse">
       <li class="inline-block m0">
-        <a href="../background/index.html"
-          class="button button-transparent py2 h6 nav-button caps">Education/Experience</a>
+        <a href="index.html" class="button button-transparent py2 h6 nav-button caps">Education/Experience</a>
       </li>
       <li class="inline-block m0">
         <a href="../writing/index.html" class="button button-transparent py2 h6 nav-button caps">Writing</a>
       </li>
       <li class="inline-block m0">
-        <a href="index.html" class="button button-transparent py2 h6 nav-button caps link-color">projects</a>
+        <a href="../projects/index.html"
+          class="button button-transparent py2 h6 nav-button caps link-color">projects</a>
       </li>
       <li class="inline-block m0">
         <a href="https://www.linkedin.com/in/ogmaro/"
@@ -80,7 +65,7 @@
     <div class="container">
       <div class="clearfix">
         <a href="index.html">
-          <h1 class="page-title mt0 mb1">Projects</h1>
+          <h1 class="page-title mt0 mb1">Education and Experience</h1>
         </a>
       </div>
       <h4 class="page-description body-font gray mt1 regular">
@@ -92,83 +77,163 @@
   <main class="container block p3">
     <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
       <div class="col sm-col-4 px2 mb2">
-        <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank">
-          <img data-src="/assets/img/projects/img-converter.png" alt="Image Converter API" class="lazyload" />
+        <a href="#" class="block h4 mb2" target="_blank">
+          <strong>09/2021-present</strong>
         </a>
       </div>
       <div class="col sm-col-8 px2">
-        <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank" name="gruntwork">
-          <h2 class="mt0 mb0">Image Converter API</h2>
-        </a>
-        <a href="https://github.com/ogmaro/image-processing-api-starter" target="_blank" class="block h6 mb2">Demo</a>
-        <p class="left-align">
-        <h3>Overview</h3>
-        This is a API service that handles image convertion using predefined images or an image link or
-        ID. These services work dynamically and can handle hign qality image conversion Check the source
-        code Here:
-        <a href="https://github.com/ogmaro/image-processing-api-starter">Image Converter</a>
-        </p>
+        <h2>Internship</h2>
+        <h4 class="mt0 h3 mb0">Stutern Apprenticeship</p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Backend Enginner</a>
+          <p class="left-align">
+            Responsibilities:
+          <ul>
+            <li>Worked on milestone project</li>
+          </ul>
+          </p>
       </div>
     </div>
     <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
       <div class="col sm-col-4 px2 mb2">
-        <a href="https://ogmaro.github.io/tip-calculator-app-main//" target="_blank">
-          <img data-src="/assets/img/projects/tip-cal-app.png" alt="Tip Calculator" class="lazyload" />
+        <a href="#" class="block h4 mb2" target="_blank">
+          <strong>04/2021-07/2021</strong>
         </a>
       </div>
       <div class="col sm-col-8 px2">
-        <a href="https://ogmaro.github.io/tip-calculator-app-main/" target="_blank" name="gruntwork">
-          <h2 class="mt0 mb0">Tip Calculator App</h2>
-        </a>
-        <a href="https://ogmaro.github.io/tip-calculator-app-main/" target="_blank" class="block h6 mb2">Demo</a>
-        <p class="left-align">
-        <h3>Overview</h3>
-        The Tip calculator helps groups of individuals evenly split bills
-        among themselves in public places such as resturants.. In this
-        project, a simple tip calculator is which take the total bill
-        amount, the amount of individuals present and the percentage the
-        would like to split the bill and then return the amount each
-        individual can contribute evenly to pay the bill. Check the source
-        code Here:
-        <a href="https://github.com/ogmaro/tip-calculator-app-main">Tip calculator</a>
-        </p>
+        <h2>Internship</h2>
+        <h4 class="mt0 h3 mb0">Zuri Internship </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Backend Intern PHP</a>
+          <p class="left-align">
+            Responsibilities:
+          <ul>
+            <li>Managed a team of engineers.</li>
+            <li>My team was resposible for build kid vaccine.</li>
+          </ul>
+          </p>
       </div>
     </div>
     <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
       <div class="col sm-col-4 px2 mb2">
-        <a href="https://ogmaro.github.io/homepage/" target="_blank">
-          <img data-src="/assets/img/projects/stutern.png" alt="Stutern" class="lazyload" />
+        <a href="#" class="block h4 mb2" target="_blank">
+          <strong>04/2021-08/2021</strong>
         </a>
       </div>
       <div class="col sm-col-8 px2">
-        <a href="https://ogmaro.github.io/homepage/" target="_blank" name="gruntwork">
-          <h2 class="mt0 mb0">Stutern Home Page</h2>
-        </a>
-        <a href="https://ogmaro.github.io/homepage/" target="_blank" class="block h6 mb2">Demo</a>
-        <p class="left-align">
-        <h3>Overview</h3>
-        This Project was build with knowledge of HTML and CSS as a mile stone project with Stutern. The Project
-        demonstrates my knowledgeof the basic frontend skills.
-        <a href="https://github.com/ogmaro/homepage">Stutern Home Page</a>
-        </p>
+        <h2>Training</h2>
+        <h4 class="mt0 h3 mb0">Jobberman Softskill Training Program </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Soft Skill Training</a>
+          <p class="left-align">
+            Soft skills:
+          <ul>
+            <li>Effective Communication in an Organization.</li>
+            <li>Flexibility, Working in Teams and Leadership</li>
+            <li>Organisational Problem Solving</li>
+            <li>Time Management</li>
+          </ul>
+          </p>
       </div>
     </div>
     <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
       <div class="col sm-col-4 px2 mb2">
-        <a href="https://github.com/ogmaro/demo_shop" target="_blank">
-          <img data-src="/assets/img/projects/electronic.png" alt="Electronic Store" class="lazyload" />
+        <a href="#" class="block h4 mb2" target="_blank">
+          <strong>04/2021-08/2021</strong>
         </a>
       </div>
       <div class="col sm-col-8 px2">
-        <a href="https://ogmaro.github.io/demo_shop/" target="_blank" name="gruntwork">
-          <h2 class="mt0 mb0"> Electronic Store</h2>
+        <h2>Work</h2>
+        <h4 class="mt0 h3 mb0">Franklin Group of Schools </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Software Developer</a>
+          <p class="left-align">
+            Responsibilities/Award:
+          <ul>
+            <li>Building and managing the school infomation website.</li>
+            <li> Managing the school's web portal using <a href="https://codeigniter.com/">Codeigniter</a>.</li>
+          </ul>
+          </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="#" class="block h4 mb2" target="_blank">
+          <strong>06/2020-02/2021</strong>
         </a>
-        <a href="https://ogmaro.github.io/demo_shop/" target="_blank" class="block h6 mb2">Demo</a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <h2>Internship</h2>
+        <h4 class="mt0 h3 mb0">Genesys Learnable '20 </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Backend Intern Javascript</a>
+          <p class="left-align">
+            Responsibilities/Award:
+          <ul>
+            <li>Managed a team of engineers and designers.</li>
+            <li>My team was resposible for designing the arcitecture for a scalable content system.</li>
+            <li>Awarded the Rick Flair award for most outstanding Intern.</li>
+          </ul>
+          </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="#" class="block h3 mb2" target="_blank">
+          <strong>2019 - 2020</strong>
+        </a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <h2>Volunteer</h2>
+        <h4 class="mt0 mb0">National Youth Service Corp (NYSC) </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Copper Laison Officer (CLO)</a>
+          <p class="left-align">
+            Duties:
+          <ul>
+            <li>Organized and trained young children under the age of 10, how to use a computer.</li>
+            <li>Managed communication between the local government at Ibeju-Lekki and the Corp Members.</li>
+            <li>Raised funds to support poor families during the shutdown COVID 19 pandemic.</li>
+          </ul>
+          </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="#" class="block h3 mb2" target="_blank">
+          <strong>2020 - 2021</strong>
+        </a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <h2>Volunteer</h2>
+        <h4 class="mt0 mb0">Social Communication Department, Archdiocese of Abuja </p>
+          </a>
+          <a href="#" target="_blank" class="block h4 mb2">Content curator</a>
+          <p class="left-align">
+            Duties:
+          <ul>
+            <li>Curation of digital content.</li>
+            <li>Managing organisation wordpress site. </li>
+          </ul>
+          </p>
+      </div>
+    </div>
+    <div class="mxn2 clearfix mb2 py3 border-bottom border-light-gray circle-line">
+      <div class="col sm-col-4 px2 mb2">
+        <a href="#" class="block h3 mb2" target="_blank">
+          <strong>2010 - 2018</strong>
+        </a>
+      </div>
+      <div class="col sm-col-8 px2">
+        <h2>Education</h2>
+        <h4 class="mt0 mb0"> Modibbo Adama University of Technology, Yola. Adamawa State</h4>
+        <p><em>formerly Federal University of Technology, Yola. Adamawa State</em> </p>
+        <a href="#" target="_blank" class="block h4 mb2">B.Tech Education</a>
         <p class="left-align">
-        <h3>Overview</h3>
-        This is a basic HTML and CSS page dynamicall filled with content using Javascript. This project taught me much
-        on DOM manipulation and event listeners.
-        <a href="https://github.com/ogmaro/demo_shop">Electronic Store</a>
+          Position held:
+        <ul>
+          <li>Director of Social Activities. <em>2013 - 2015</em></li>
+        </ul>
         </p>
       </div>
     </div>
@@ -218,7 +283,5 @@
     ga("send", "pageview");
   </script>
 </body>
-
-<!-- Mirrored from www.ybrikman.com/projects/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 07 Mar 2022 22:44:03 GMT -->
 
 </html>
