--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Patrick Timothy Njoli: Home</title>
-  <meta name="description"
-    content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
+  <meta name="description" content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@_njoli" />
@@ -19,7 +18,7 @@
   <meta property="og:title" content="Patrick Timothy Njoli: Home Page" />
   <meta property="og:url" content="index.html" />
   <meta property="og:site_name" content="Patrick Timothy Njoli" />
-  <meta property="article:author" content="https://www.facebook.com/brikis98" />
+  <meta property="article:author" content="https://www.facebook.com/maronation" />
   <meta property="og:description"
     content='The home page of Patrick Timothy Njoli, passionate about softwares engineering.' />
   <meta property="og:image" content="assets/img/profile-photos/njoli-patrick.jpeg" />
@@ -54,12 +53,16 @@
     </div>
     <ul class="right list-reset m0 nav-collapse">
       <li class="inline-block m0">
-        <a href="writing/index.html" class="button button-transparent py2 h6 nav-button caps">writing</a>
+        <a href="background/index.html"
+          class="button button-transparent py2 h6 nav-button caps">Education/Experience</a>
+      </li>
+      <li class="inline-block m0">
+        <a href="writing/index.html" class="button button-transparent py2 h6 nav-button caps">Writing</a>
       </li>
       <li class="inline-block m0">
         <a href="projects/index.html" class="button button-transparent py2 h6 nav-button caps">projects</a>
       </li>
-       <li class="inline-block m0">
+      <li class="inline-block m0">
         <a href="https://www.linkedin.com/in/ogmaro/"
           class="button button-transparent py2 h6 nav-button caps">Linkedin</a>
       </li>
@@ -139,7 +142,7 @@
     </div>
   </main>
   <footer class="sticky-footer border-top border-light-gray gray h6">
-    <div class="sm-col px2">&copy; 2020 Yevgeniy Brikman.</div>
+
     <div class="sm-col-right px2">
       <a href="https://twitter.com/_njoli" target="_blank" class="gray hint--top" data-hint="Twitter">
         <i class="fa fa-fw fa-lg fa-twitter-square"></i>
