--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       </h3>
       <h5>
         Tools:
-        <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">NodeJs,</a></em>
-        <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">ExpressJS,</a></em><em><a
-            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Typescript,</a></em>
-        <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Laravel,</a></em>
-        <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Linux,</a></em>
-        <em><a href="https://developer.mozilla.org/en-US/docs/Glossary/PHP" target="_blank">Tailwind CSS</a></em>
+        <em><a href="https://nodejs.org/en/docs/" target="_blank">NodeJs,</a></em>
+        <em><a href="https://expressjs.com/en/starter/installing.html" target="_blank">ExpressJS,</a></em><em><a
+            href="https://www.typescriptlang.org/docs/" target="_blank">Typescript,</a></em>
+        <em><a href="https://laravel.com/docs/9.x" target="_blank">Laravel,</a></em>
+        <em><a href="https://www.linux.org/" target="_blank">Linux,</a></em>
+        <em><a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a></em>
       </h5>
     </div>
   </header>
