updated about me

--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
       <div class="col sm-col-9 px2">
         <h3 class="mb2">About me</h3>
         <p>
-          I'm Patrick Timothy Njoli and am passionate about softwares engineering. My
-          goal is to work as a part of a small or large teams to build and deploy usable
-          backend services. These are only a few from the tools I am awesome
-          at:
+         I'm a Software Engineer knowledgeable with tools that enables me to work as part of small and large teams to build highly scalable web applications. I also write for my public blog where I write technical articles and share my opinion on the Africa tech ecosystem. These are only a few from the tools I am familiar
+          with:
         <ul>
           <li><a href="https://www.typescriptlang.org/docs/">TypeScript</a></li>
           <li><a href="https://nodejs.org/en/docs/">NodeJs</a></li>
+          <li><a href="https://jasmine.github.io/">Jasmine</a></li>
           <li><a href="https://github.com/ogmaro">Git and Version control</a></li>
           <li> <a href="https://hashnode.com/@ogmaro">Writing</a></li>
         </ul>
